After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 784481 - Fix a couple of introspection issues
Fix a couple of introspection issues
Status: RESOLVED FIXED
Product: at-spi
Classification: Platform
Component: at-spi2-core
unspecified
Other All
: Normal normal
: ---
Assigned To: At-spi maintainer(s)
At-spi maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-07-03 17:46 UTC by Rico Tzschichholz
Modified: 2017-07-03 20:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix a couple of introspection issues (3.18 KB, patch)
2017-07-03 17:46 UTC, Rico Tzschichholz
committed Details | Review

Description Rico Tzschichholz 2017-07-03 17:46:04 UTC
This mainly restores the gir entry for AtspiApplication.
Comment 1 Rico Tzschichholz 2017-07-03 17:46:09 UTC
Created attachment 354846 [details] [review]
Fix a couple of introspection issues
Comment 2 Emmanuele Bassi (:ebassi) 2017-07-03 18:51:24 UTC
Review of attachment 354846 [details] [review]:

Yep, this looks good.
Comment 3 Rico Tzschichholz 2017-07-03 20:15:31 UTC
Attachment 354846 [details] pushed as 79e6331 - Fix a couple of introspection issues