Fix a couple of introspection issues

This mainly restores the gir entry for AtspiApplication.

https://bugzilla.gnome.org/show_bug.cgi?id=784481